src/objects/Request_Title__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arabic_Name__c</fullName>
        <label>Arabic Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_of_Distribution__c</fullName>
        <label>Area of Distribution</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UAE</fullName>
                </value>
                <value>
                    <fullName>GCC</fullName>
                </value>
                <value>
                    <fullName>Middle east</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Worldwide</fullName>
                </value>
                <value>
                    <fullName>Kuwait</fullName>
                </value>
                <value>
                    <fullName>Oman</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>KSA</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Background__c</fullName>
        <label>Background</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Plan_Review_and_Comments__c</fullName>
        <label>Business Plan Review and Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DDA_Request_Tile_Id__c</fullName>
        <externalId>true</externalId>
        <label>DDA Request Tile Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Company__c</fullName>
        <label>Distribution Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Type__c</fullName>
        <label>Distribution Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Controlled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_revenue__c</fullName>
        <label>Estimated revenue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Franchise_Duration_From__c</fullName>
        <label>Franchise Duration From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Franchise_Duration_To__c</fullName>
        <label>Franchise Duration To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Franchise_Name__c</fullName>
        <label>Franchise Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Bi-Annually</fullName>
                </value>
                <value>
                    <fullName>Bi-Monthly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Fortnightly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Periodical Supplement</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Three Times a Year</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Genre__c</fullName>
        <label>Genre</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lifestyle</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Fashion</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Industry</fullName>
                </value>
                <value>
                    <fullName>Children</fullName>
                </value>
                <value>
                    <fullName>property</fullName>
                </value>
                <value>
                    <fullName>Machinery</fullName>
                </value>
                <value>
                    <fullName>Tourism</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Marine</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Cooking</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Interior design</fullName>
                </value>
                <value>
                    <fullName>Guide</fullName>
                </value>
                <value>
                    <fullName>Pets</fullName>
                </value>
                <value>
                    <fullName>Directory</fullName>
                </value>
                <value>
                    <fullName>Financial Knowledge</fullName>
                </value>
                <value>
                    <fullName>Art &amp; Culture</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Office Supplies</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Maps</fullName>
                </value>
                <value>
                    <fullName>Sports</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Approved_by_NMC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Approved by NMC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Name_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Name Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Proposed_Name_1_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Proposed Name 1 Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Proposed_Name_2_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Proposed Name 2 Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Proposed_Name_3_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Proposed Name 3 Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>English &amp; Arabic</fullName>
                </value>
                <value>
                    <fullName>Farsi &amp; Arabic</fullName>
                </value>
                <value>
                    <fullName>Farsi</fullName>
                </value>
                <value>
                    <fullName>Malayalam</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Tagalog</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Urdu</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Sinhala</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_similar_Genre__c</fullName>
        <label>No. of similar Genre</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_similar_Genre_deleted_in_the_year__c</fullName>
        <label>No. of similar Genre deleted in the year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Printing_Company__c</fullName>
        <label>Printing Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Name_1__c</fullName>
        <label>Proposed Name 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Name_2__c</fullName>
        <label>Proposed Name 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Name_3__c</fullName>
        <label>Proposed Name 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_in_brief__c</fullName>
        <label>Publication in brief</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recommendations__c</fullName>
        <label>Recommendations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selling_Price__c</fullName>
        <label>Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Targeted_Audience__c</fullName>
        <label>Targeted Audience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Businessmen</fullName>
                </value>
                <value>
                    <fullName>Businesswomen</fullName>
                </value>
                <value>
                    <fullName>Children</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Request Titles</relationshipLabel>
        <relationshipName>Request_Titles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Request Title</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Request Title Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Titles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>